Reuse clone layer's own convert-to-paintlayer for the general one.

The clone layer has special considerations when converting to
paintlayer, so it makes sense to reuse that function when needed.

Amongst others, it'll ensure that the offset of the layer is correct.

BUG:437431